crates/analyzer/tests/snapshots/errors__ctx_missing_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_missing_create.fe:7:13
  │
7 │         ctx.create<Foo>(0)
  │             ^^^^^^      - supplied 1 argument
  │             │            
  │             expects 2 arguments

error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_missing_create.fe:7:13
  │
7 │         ctx.create<Foo>(0)
  │             ^^^^^^      - supplied 1 argument
  │             │            
  │             expects 2 arguments

error: missing argument label
  ┌─ compile_errors/ctx_missing_create.fe:7:25
  │
7 │         ctx.create<Foo>(0)
  │                         ^ add `args:` here
  │
  = Note: this label is optional if the argument is a variable named `args`.

error: incorrect type for `create` argument `args`
  ┌─ compile_errors/ctx_missing_create.fe:7:25
  │
7 │         ctx.create<Foo>(0)
  │                         ^ this has type `u256`; expected type `()`


